--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "dayjs": "^1.11.9",
+    "dexie": "^3.2.4",
+    "dexie-react-hooks": "^1.1.6",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.196",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
