--- a/package.json
+++ b/package.json
@@ -54,5 +54,9 @@
     "vite": "^4.4.5",
     "vitest": "^0.34.1",
     "webdriverio": "^8.14.3"
+  },
+  "volta": {
+    "node": "18.17.1",
+    "yarn": "3.6.2"
   }
 }
